# rdf-dataset-stats-py

./: .gitignore  README.md  SPEC.md  o.xlsx  pyproject.toml
src/rdf_dataset_stats/: __init__.py  cli.py  collector.py  excel.py  model.py
tests/: test_cli.py  test_collector.py  test_dump_collector.py  test_excel.py  test_imports.py  test_model.py
